welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var nbrebiscuit=0

while (sortieTrouvee()==false){
  do{
    avance()
  	if (estSurBiscuit()==true){
      nbrebiscuit=nbrebiscuit+1
    }
  }while(crossing()=true)
    
  if (nbrebiscuit>2){
  	gauche()
  }else if (nbrebiscuit<3){
    droite()
  }
  nbrebiscuit=0
}
    
if (sortieTrouvee()==true){
  avance()
}